--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.LuckyTap" parent="Theme.MaterialComponents.DayNight.NoActionBar" />
+    <style name="Theme.LuckyTap" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:statusBarColor">@android:color/white</item>
+        <item name="android:colorPrimary">@color/holo_blue_dark</item>
+        <item name="android:colorPrimaryDark">@color/teal_700</item>
+        <item name="android:colorAccent">@color/teal_200</item>
+    </style>
 </resources>
