--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:padding="16dp"
-        android:text="Retry"
+        android:text="@string/retry"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         app:backgroundTint="@android:color/holo_blue_dark"
